@@ -157,6 +157,9 @@ final class FSTSynonymFilterFactory extends BaseTokenFilterFactory implements Re
   private static TokenizerFactory loadTokenizerFactory(ResourceLoader loader, String cname, Map<String,String> args){
     TokenizerFactory tokFactory = (TokenizerFactory) loader.newInstance(cname);
     tokFactory.init(args);
+    if (tokFactory instanceof ResourceLoaderAware) {
+      ((ResourceLoaderAware) tokFactory).inform(loader);
+    }
     return tokFactory;
   }
 }
